[gd_scene load_steps=2 format=3 uid="uid://cnktqo7fdfb0c"]
[ext_resource type="Script" path="res://scenes/careers/challenges/lesson_plan_challenge.gd" id="1"]
[node name="LessonPlanChallenge" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")
[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0
theme_override_constants/separation = 20
[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Challenge 1: Lesson Planning"
horizontal_alignment = 1
[node name="ProblemPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
[node name="ProblemText" type="RichTextLabel" parent="VBoxContainer/ProblemPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Problem"
[node name="OptionsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
[node name="FeedbackLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Feedback"
autowrap_mode = 3
[node name="SubmitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Submit Answer"
